--- a/experiment1/config.yaml
+++ b/experiment1/config.yaml
@@ -1,3 +1,7 @@
+# xAILab
+# Chair of Explainable Machine Learning
+# Otto-Friedrich University of Bamberg
+#
 
 # Fixed Parameters
 data_path: ''  # Where the dataset is stored
